force-app/main/default/objects/IdvPs_Status_Config__mdt/IdvPs_Status_Config__mdt.object-meta.xml
<CustomObject>
    <description>Individual Plan Structure&apos;s status configuration.</description>
    <label>IdvPs Status Config</label>
    <pluralLabel>IdvPs Status Config</pluralLabel>
</CustomObject>