force-app/main/default/objects/IdvPs_Status_Config__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The option API value for the status field.</description>
    <inlineHelpText>The option API value for the status field.</inlineHelpText>
    <label>Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>